--- a/templates/index.jade
+++ b/templates/index.jade
@@ -25,4 +25,5 @@ head
 		script(src="libs/jquery.hammer.js")
 		script(src="node_modules/angular/angular.min.js")
 		script(src="node_modules/angular-ui-router/release/angular-ui-router.min.js")
+		script(src="node_modules/angular-md5/angular-md5.min.js")
 		script(src="app.js")
