--- a/css/Buscador/Buscador.scss
+++ b/css/Buscador/Buscador.scss
@@ -1,6 +1,11 @@
 .Buscador{
 	width:90%;
 	margin: 0 auto;
+	&-MensajeHttp{
+		font-size: 12px;
+		font-weight: bold;
+		color:$rosa;
+	}
 	&-ContCampo{
 		width: 100%;
 		position:relative;
