--- a/templates/Buscador.jade
+++ b/templates/Buscador.jade
@@ -1,6 +1,8 @@
 .Contenedor
 	section.Buscador
 		section.Buscador-ContCampo
+			p.Buscador-MensajeHttp
+				|Si tiene problemas con la busqueda de los heroes, permita cargas las secuencias de comandos inseguras, esto se debe a que la petición debería estar bajo https
 			label.Buscador-Etiqueta.is-Active(for="Buscador-Campo") 
 				|Busca un heroe de marvel
 				span(ng-click="ShowSugerencia()") ?
